[project]
name = "fastmpl"
version = "0.1.0"
description = "Opiniated charts for fast visualization with matplotlib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "narwhals>=1.30.0",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
]
